--- a/fizzbuzz/fizzbuzz/fizzbuzz.csproj
+++ b/fizzbuzz/fizzbuzz/fizzbuzz.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F0E3B8FB-D017-4C59-9C0E-561F88D91E51}</ProjectGuid>
+    <ProjectGuid>{2C157955-F7AB-4677-83FA-E7C187A90432}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ChooseYourOwnDestiny</RootNamespace>
-    <AssemblyName>ChooseYourOwnDestiny</AssemblyName>
+    <RootNamespace>fizzbuzz</RootNamespace>
+    <AssemblyName>fizzbuzz</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,9 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="coward.cs" />
-    <Compile Include="gumshoe.cs" />
-    <Compile Include="Introduction.cs" />
+    <Compile Include="fizzbuzz.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
